css/projects.css.css
.projects--wrapper {
  margin-left: -8px;
}
.projects--wrapper .project--container {
  border: 1px solid #34302d;
  display: inline-block;
  width: 286px;
  height: 338px;
  margin: 0 6px 20px 6px;
  vertical-align: top;
  text-align: center;
  padding: 30px 20px;
}
.projects--wrapper .project--container .project-logo--container {
  margin-bottom: 25px;
  height: 137px;
  vertical-align: middle;
}
.projects--wrapper .project--container .project-logo--container .project--logo {
  display: inline-block;
  vertical-align: middle;
}
.projects--wrapper .project--container .project--title {
  font-family: "Montserrat", sans-serif;
  font-size: 16px;
  line-height: 20px;
  margin-bottom: 20px;
  text-transform: uppercase;
}
.projects--wrapper .project--container .project--description {
  font-size: 14px;
  line-height: 20px;
}
.projects--wrapper .project--container .project-links--container {
  position: absolute;
  background-color: rgba(109, 179, 63, 0.95);
  padding: 13px 0;
  width: 326px;
  margin: 127px 0 0 -20px;
  height: 58px;
  opacity: 0;
  transition: opacity 0.15s;
  -webkit-transition: opacity 0.15s;
  -moz-transition: opacity 0.15s;
  -o-transition: opacity 0.15s;
  -ms-transition: opacity 0.15s;
}
.projects--wrapper .project--container .project-links--container .project-link {
  display: inline-block;
  margin: 0 15px;
}
.projects--wrapper .project--container .project-links--container .project-link [class^=icon-] {
  font-size: 34px;
  width: 34px;
  height: 34px;
  color: rgba(241, 241, 241, 0.75);
}
.projects--wrapper .project--container .project-links--container .project-link p {
  margin: 6px 0;
  color: rgba(241, 241, 241, 0.75);
  font-size: 14px;
  line-height: 14px;
}
.projects--wrapper .project--container .project-links--container .project-link:hover {
  text-decoration: none;
}
.projects--wrapper .project--container .project-links--container .project-link:hover [class^=icon-] {
  color: white;
}
.projects--wrapper .project--container:hover .project-links--container {
  opacity: 1;
}
.projects--wrapper .project--container.parent-project .child-project-count--wrapper {
  float: right;
}
.projects--wrapper .project--container.parent-project .child-project-count--wrapper .child-project-count--number {
  position: relative;
  z-index: 101;
  color: #f1f1f1;
  margin: -22px -9px 0 9px;
}
.projects--wrapper .project--container.parent-project .child-project-count--wrapper .child-project-count--background {
  position: absolute;
  margin: -54px 0 0 -5px;
  z-index: 100;
  width: 0;
  height: 0;
  border-top: 40px solid transparent;
  border-bottom: 40px solid transparent;
  border-left: 40px solid #6db33f;
  transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -o-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
}

.projects--wrapper.project-aggregator .project--container {
    height: 160px;
}
.projects--wrapper.project-aggregator .project--container .project-links--container {
    margin-top: 42px;
}

.project-header--wrapper .billboard--container {
  margin-top: 60px;
}
.project-header--wrapper .content--title {
  position: relative;
  margin-bottom: 30px;
  margin-top: 0;
}
.project-header--wrapper .content--title a {
  color: #f1f1f1;
}
.project-header--wrapper .content--title p {
  color: #f1f1f1;
  font-size: 12px;
  line-height: 12px;
}
.project-header--wrapper .project--title {
  font-family: "Montserrat", sans-serif;
  font-size: 24px;
  line-height: 24px;
  margin-bottom: 20px;
  color: #ebf1e7;
}
.project-header--wrapper .project--links--container {
  float: right;
  margin-top: -5px;
}
.project-header--wrapper .project--links--container .project-link {
  display: inline-block;
  vertical-align: middle;
  margin-right: 10px;
}
.project-header--wrapper .project--links--container .project-link [class^=icon-] {
  font-size: 37px;
  width: 34px;
  height: 34px;
  color: #d4d4d4;
}
.project-header--wrapper .project--links--container .project-link:last-child {
  margin-right: 20px;
}
.project-header--wrapper .project--links--container .project-link:hover {
  text-decoration: none;
}
.project-header--wrapper .project--links--container .project-link:hover [class^=icon-] {
  color: #6db33f;
}
.project-header--wrapper .project--links--container .project-link div.icon {
  margin-top: 3px;
}
.project-header--wrapper div.project--description {
  color: #f1f1f1;
  font-size: 16px;
  line-height: 24px;
}
.project-header--wrapper div.project--description p {
  color: #f1f1f1;
}
.project-header--wrapper .project--description a {
  color: #5fa134;
}
.project-header--wrapper .project-download-widget-btn {
  margin-top: 40px;
}
.project-header--wrapper .billboard-bg {
  background-color: #666;
}
.project-header--wrapper .billboard-bg .billboard-icon {
  width: 330px;
  height: 364px;
  position: absolute;
  right: 0;
  margin-top: 25px;
  opacity: 0.5;
}
.project-header--wrapper .billboard-bg .billboard-icon.icon-spring-data-large {
  background-image: url("../img/icon-spring-data-large.png");
}
.project-body--container .project-body--section#download-widget {
  padding-top: 15px;
}
.project-body--container .project-body--section {
  margin-bottom: 30px;
  padding-right: 20px;
}
.project-body--container .project-body--section p {
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 20px;
}
.project-body--container .project-body--section li {
  padding: 5px 0;
}
.project-body--container .project-body--section .underlined-title {
  border-bottom: 1px solid white;
  padding-bottom: 10px;
  margin-bottom: 20px;
}
.project-body--container .project-body--section h3 {
  font-family: "Montserrat", sans-serif;
  font-weight: bold;
}
.project-body--container .project-body--section pre {
  border-radius: 0;
}

.download-widget--container {
  border: 1px solid #34302d;
  margin-top: 15px;
}
.download-widget--container .download-widget--title {
  font-family: "Montserrat", sans-serif;
  color: #f1f1f1;
  background-color: #34302d;
  font-size: 16px;
  line-height: 16px;
  padding: 17px 0;
  width: 211px;
  text-align: center;
  display: inline-block;
}
.download-widget--container .download-widget--dropdown {
  display: inline-block;
  width: 34.6%;
  margin-left: 16px;
}
.download-widget--container .download-widget--dropdown .item-dropdown--title {
  padding: 9px 0 7px 20px;
  border: 1px solid #34302d;
}
.download-widget--container .download-widget--dropdown .item-dropdown--title .icon {
  margin: -3px 0 0 6px;
  vertical-align: middle;
}
.download-widget--container .download-widget--dropdown .item-dropdown--icon {
  padding: 9px;
  background-color: #34302d;
}
.download-widget--container .download-widget--dropdown .project-version--dropdown {
  width: 100%;
  padding: 0;
}
.download-widget--container .download-widget--dropdown .project-version--dropdown .project-version {
  color: #f1f1f1;
  padding: 8px 20px;
  border-top: 1px solid #4a4440;
  cursor: pointer;
}
.download-widget--container .download-widget--dropdown .project-version--dropdown .project-version .icon {
  margin: -3px 0 0 6px;
  vertical-align: middle;
}
.download-widget--container .download-widget--dropdown .project-version--dropdown .project-version.active {
  background-color: black;
  border-color: transparent;
}
.download-widget--container .download-widget--dropdown .project-version--dropdown .project-version.active:hover {
  background-color: black;
}
.download-widget--container .download-widget--dropdown .project-version--dropdown .project-version:first-child {
  border: none;
}
.download-widget--container .download-widget--dropdown .project-version--dropdown .project-version:hover {
  background-color: rgba(0, 0, 0, 0.3);
}
.download-widget--container .download-widget--dropdown.js-open .item-dropdown--title {
  border: 1px solid #6db33f;
}
.download-widget--container .download-widget--dropdown:hover .item-dropdown--icon {
  color: white;
}
.download-widget--container .download-widget--body {
  padding: 20px;
}

.project-documentation--container {
  border-color: #34302d;
}
.project-documentation--container .item-dropdown--title {
  background-color: transparent;
  border-bottom: 1px solid #34302d;
  padding: 20px;
  font-family: "Montserrat", sans-serif;
  font-size: 14px;
  line-height: 14px;
}
.project-documentation--container .item--dropdown {
  display: block;
  position: relative;
  width: 100%;
  padding: 0;
  border: none;
  background-color: transparent;
}
.project-documentation--container .item--dropdown .item--body-title {
  padding-top: 15px;
  color: #34302d;
  margin: 0 20px;
  border-color: #d7d5d3;
}
.project-documentation--container .item--dropdown .item--body--version {
  margin: 0 20px;
  border-color: #d7d5d3;
}
.project-documentation--container .item--dropdown .item--body--version p {
  color: #34302d;
  display: inline-block;
}
.project-documentation--container .item--dropdown .item--body--version .icon {
  vertical-align: top;
  margin: 2px 0 0 6px;
}
.project-documentation--container .item--dropdown .item--body--version .icon.icon-pre-release {
  background-color: #34302d;
  border-radius: 2px;
}
.project-documentation--container .item--dropdown .item--body--version:last-child {
  margin-bottom: 20px;
}

.project-sub-link--wrapper {
  padding: 20px 20px 18px;
}
.project-sub-link--wrapper .project-sub-link {
  min-width: 30px;
  height: 30px;
  display: inline-block;
  margin-right: 2.9%;
}
.project-sub-link--wrapper .project-sub-link:last-child {
  margin-right: 0;
}

.project-sidebar-resource--wrapper {
  padding: 20px;
}
.project-sidebar-resource--wrapper h3 {
  margin: 5px 0;
}
.project-sidebar-resource--wrapper ul {
  margin: 0 0 25px 0;
}
.project-sidebar-resource--wrapper ul li {
  border: none;
  padding: 5px 0;
}
.project-sidebar-resource--wrapper ul:last-child {
  margin-bottom: 0;
}
.github-fork-ribbon--wrapper {
  width: 150px;
  height: 150px;
  position: absolute;
  overflow: hidden;
  margin-top: -102px;
  z-index: 9999;
  right: 0;
}
.github-fork-ribbon--wrapper .github-fork-ribbon {
  position: absolute;
  padding: 2px 0;
  background-color: #34302d;
  -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.33);
  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.33);
  z-index: 9999;
  top: 42px;
  right: -43px;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -o-transform: rotate(45deg);
}
.github-fork-ribbon--wrapper .github-fork-ribbon a {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 13px;
  font-weight: 500;
  color: #f1f1f1;
  text-decoration: none;
  text-shadow: 0 -1px rgba(0, 0, 0, 0.5);
  text-align: center;
  width: 200px;
  line-height: 20px;
  display: inline-block;
  padding: 2px 0;
  border: 1px dotted rgba(255, 255, 255, 0.75);
  border-width: 1px 0;
}
.github-fork-ribbon--wrapper .github-fork-ribbon a i {
  font-size: 23px;
  vertical-align: middle;
  margin: 0 3px 0 0;
  color: black;
}

